--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@simplewebauthn/browser": "^8.0.2",
     "@tanstack/react-table": "^8.9.3",
     "@types/mockjs": "^1.0.7",
     "axios": "^1.5.0",
