--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
+    "useUnknownInCatchVariables": false,
     "lib": [
       "ES2020",
       "DOM",
