--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dayjs": "^1.11.9",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
     "mockjs": "^1.1.0",
     "prettier": "^3.0.2",
     "react": "^18.2.0",
