--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -15,4 +15,4 @@ spec:
     spec:
       containers:
         - name: ohmyhelper-fe
-          image: ccr.ccs.tencentyun.com/ohmyhelper/ohmyhelper-web:v0.1
+          image: swr.cn-south-1.myhuaweicloud.com/cruii/ohmyhelper-fe:{{version}}
