--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -16,3 +16,5 @@ spec:
       containers:
         - name: ohmyhelper-fe
           image: swr.cn-south-1.myhuaweicloud.com/cruii/ohmyhelper-fe:{{version}}
+      imagePullSecrets:
+        - name: default-secret
