--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mockjs": "^1.1.0",
     "prettier": "^3.0.2",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
