--- a/.drone.yml
+++ b/.drone.yml
@@ -8,5 +8,13 @@ steps:
   commands:
   - echo hello
   - echo world
-  - echo ${DRONE_BRANCH}
+  - echo '构建分支${DRONE_BRANCH}'
   - echo ${DRONE_COMMIT}
+  - echo ${DRONE_COMMIT_MESSAGE}
+  - echo ${DRONE_REPO_BRANCH}
+  - echo ${DRONE_REPO}
+  - echo ${DRONE_REPO_LINK}
+  - echo ${DRONE_SEMVER}
+  - echo ${DRONE_TAG}
+  - echo ${DRONE_SOURCE_BRANCH}
+  - echo ${DRONE_TARGET_BRANCH}
