--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -34,6 +35,7 @@
     "dayjs": "^1.11.9",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "framer-motion": "^10.16.12",
     "mobx": "^6.10.2",
     "mobx-react": "^9.0.1",
     "mockjs": "^1.1.0",
